--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="footer-text">TG:SOUNDQUELA</div>
     <img src="gfrre.png" alt="" id="playImage">
     <audio id="audio" loop>
-        <source src="kiriecki.mp3" type="audio/mpeg">
+        <source src="ystaldro.mp3" type="audio/mpeg">
     </audio>
     <script>
         const audio = document.getElementById('audio');
