--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
             background: linear-gradient(135deg, #1a1a1a, #4a4a4a);
             flex-direction: column;
             position: relative;
-            user-select: none; /* Запрещает выделение для всей страницы */
+            user-select: none;
         }
         img {
             width: 300px;
             height: auto;
             border-radius: 10px;
             cursor: pointer;
-            user-select: none; /* Запрещает выделение */
-            -webkit-user-drag: none; /* Запрещает перетаскивание в Safari */
-            -webkit-user-select: none; /* Запрещает выделение в Chrome/Safari */
-            -moz-user-select: none; /* Запрещает выделение в Firefox */
-            -ms-user-select: none; /* Запрещает выделение в Edge */
+            user-select: none;
+            -webkit-user-drag: none;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
         }
         .footer-text {
             position: absolute;
@@ -39,26 +39,32 @@
 </head>
 <body>
     <div class="footer-text">TG:SOUNDQUELA</div>
-    <img src="gfrre.png" alt="" id="playImage">
+    <img src="fref.png" alt="" id="playImage">
     <audio id="audio" loop>
         <source src="ystaldro.mp3" type="audio/mpeg">
     </audio>
     <script>
-        const audio = document.getElementById('audio');
-        const playImage = document.getElementById('playImage');
-        let isPlaying = false;
+        document.addEventListener("DOMContentLoaded", () => {
+            const audio = document.getElementById("audio");
+            const playImage = document.getElementById("playImage");
+            let isPlaying = false;
 
-        playImage.addEventListener('click', () => {
-            if (isPlaying) {
-                audio.pause();
-            } else {
-                audio.play();
-            }
-            isPlaying = !isPlaying;
-        });
+            const playAudio = () => {
+                audio.play().catch(error => {
+                    document.addEventListener("click", playAudio, { once: true });
+                });
+            };
 
-        document.documentElement.requestFullscreen().catch(err => {
-            console.log("Не удалось открыть в полноэкранном режиме: ", err);
+            playAudio();
+
+            playImage.addEventListener("click", () => {
+                if (isPlaying) {
+                    audio.pause();
+                } else {
+                    audio.play();
+                }
+                isPlaying = !isPlaying;
+            });
         });
     </script>
 </body>
