--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
     <div class="footer-text">TG:SOUNDQUELA</div>
-    <img src="fref.png" alt="" id="playImage">
+    <img src="gfrre.png" alt="" id="playImage">
     <audio id="audio" loop>
         <source src="ystaldro.mp3" type="audio/mpeg">
     </audio>
